<resources>
    <string name="app_name">WAMIKA</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_click">\"Klik layar\"</string>
    <string name="hint_no_anggota">No Anggota</string>
    <string name="hint_nama">Nama Lengkap</string>
    <string name="hint_password">Password</string>
    <string name="text_anggota">Anggota</string>
    <string name="text_pengurus">Pengurus Harian</string>
    <string name="text_lupa">Lupa Password?</string>
    <string name="text_sebagai_pengurus">Sebagai Pengurus?</string>
    <string name="text_login">Login</string>
    <string name="text_sebagai_anggota">Sebagai Anggota?</string>
</resources>
