<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/login_anggota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginAnggota">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@id/tv_anggota"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_wamika" />

    <TextView
        android:id="@+id/tv_anggota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/scroll_edit_anggota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif"
        android:text="@string/text_anggota"
        android:textAlignment="center"
        android:textColor="#148914"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_edit_anggota"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/edt_no_anggota"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/hint_no_anggota"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/edt_nama_anggota"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/edt_no_anggota"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/hint_nama"
                android:textAlignment="center"
                android:textColorHint="#ffffff" />

            <EditText
                android:id="@+id/edt_password_anggota"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_below="@id/edt_nama_anggota"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="#ffffff" />
        </RelativeLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_Lupa_anggota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_edit_anggota"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/spacer_anggota"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/text_lupa"
        android:textColor="#044604"
        android:textSize="12sp" />

    <Space
        android:id="@+id/spacer_anggota"
        android:layout_width="10dp"
        android:layout_height="15dp"
        android:layout_below="@id/scroll_edit_anggota"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_sebagai_anggota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_edit_anggota"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/spacer_anggota"
        android:clickable="true"
        android:focusable="true"
        android:padding="5dp"
        android:text="@string/text_sebagai_pengurus"
        android:textColor="#044604"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btn_login_anggota"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/spacer_anggota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:backgroundTint="#148914"
        android:text="@string/text_login"
        android:textColor="@android:color/white" />
</RelativeLayout>